backend/merchant_backend/src/main/java/com/example/merchant/domain/parking/error/InvalidMerApiKeyException.java
package com.example.merchant.domain.parking.error;

public class InvalidMerApiKeyException extends IllegalArgumentException {

    public InvalidMerApiKeyException() {
        super("Invalid merApiKey");
    }

    public InvalidMerApiKeyException(String message) {
        super(message);
    }

    @Override
    public synchronized Throwable fillInStackTrace() {
        return this;
    }
}
